--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pug": "^3.0.2",
     "socket.io": "^4.1.2",
     "twilio": "^3.63.0",
+    "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "winston-mongodb": "^5.0.5"
   },
