Invalid access token

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "kavenegar": "^1.1.4",
     "lodash": "^4.17.21",
     "mongoose": "^5.11.14",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-cache": "^5.1.2",
